--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "firebase": "^10.7.0",
     "lucide-react": "^0.309.0",
     "tailwindcss": "^3.3.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28"
   },
   "devDependencies": {
     "@types/node": "^20",
