--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,6 @@
-
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAxamLsU6ZpHTzNR2i-_PmL_EPYC8feKrY
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=wg-nursery-system.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=wg-nursery-system
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=wg-nursery-system.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=475342845298
+NEXT_PUBLIC_FIREBASE_APP_ID=1:475342845298:web:7e640e00d5656a544a59eb
