--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "export": "next build && next export",
-  "deploy": "npm run export && firebase deploy",
-  "init-db": "curl http://localhost:3000/api/setup-database"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "firebase": "^10.8.0",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "firebase": "^10.7.0",
-    "lucide-react": "^0.309.0",
-    "tailwindcss": "^3.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "date-fns": "^2.30.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.28"
+    "lucide-react": "^0.331.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "typescript": "^5"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
